--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,5 +1,5 @@
-body{
-  font-family:Arial, Helvetica, sans-serif;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .para,
@@ -8,37 +8,25 @@ body{
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-weight: 100;
-  font-size: 22px;
-}
-
 .small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-#confirm-button {
+.para {
+  font-size: 22px;
+}
+
+.confirm {
   background: green;
   color: white;
   font-weight: bold;
-}
+} 
 
-div .child {
+.button {
+  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .child {
