--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+.body{
+  text-align: center;
+}
+.container{
+  display: flex; 
+  justify-content: center;
+  gap: 52px;
+}
+.title{
+  display: flex;
+  margin-bottom: 32px;
+  justify-content: center;
+}
+.info{
+  max-width: 200px;
+}
